containerization/kubernetes/common-resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: road-object-detection
